Infinite Zoom #42506

Closed
opened 2014-11-05 18:52:56 +01:00 by Aaron Carlisle · 34 comments
Member

System Information
Windows 8.0 and intel graphics 4600

Blender Version
Broken: 2.72b (9e963ae)
Worked: (optional)

Short description of error
Within the sequencer in preview allows you to zoom forever
creating a very jagged result witch is not needed the super large pixels is more then good

Exact steps for others to reproduce the error

  1. Place a image strip in the sequencer
  2. Go to the preview and zoom in and keep zoom after you get the huge pixels
**System Information** Windows 8.0 and intel graphics 4600 **Blender Version** Broken: 2.72b (9e963ae) Worked: (optional) **Short description of error** Within the sequencer in preview allows you to zoom forever creating a very jagged result witch is not needed the super large pixels is more then good **Exact steps for others to reproduce the error** 1. Place a image strip in the sequencer 2. Go to the preview and zoom in and keep zoom after you get the huge pixels
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Author
Member

Removed subscriber: @Blendify

Removed subscriber: @Blendify
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Jonata Bolzan was assigned by Aaron Carlisle 2014-11-05 19:25:14 +01:00
Author
Member

Here Is a image of what will happen

Capture.JPG

and you can zoom in more then that

Here Is a image of what will happen ![Capture.JPG](https://archive.blender.org/developer/F122138/Capture.JPG) and you can zoom in more then that
Jonata Bolzan was unassigned by Aaron Carlisle 2014-11-05 21:14:13 +01:00
Ton Roosendaal was assigned by Aaron Carlisle 2014-11-05 21:14:13 +01:00
Author
Member

Added subscriber: @jonata

Added subscriber: @jonata
Ton Roosendaal was unassigned by Aaron Carlisle 2014-11-05 21:15:24 +01:00
Jonata Bolzan was assigned by Aaron Carlisle 2014-11-05 21:15:24 +01:00
Author
Member

Added subscriber: @Ton

Added subscriber: @Ton
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Hey @Blendify,
I don't see a need for a fix here. Having no limits isn't a bad thing mostly ;).

Furthermore, I'd like to adress a couple of things in this report:

  • If you don't really know the active Blender developers and who's responsible for which part of Blender, don't assign bugs by yourself. Especially, you shouldn't assign bugs to Ton, as he currently isn't able to code for Blender or fix Bugs at all, there are other people doing this. I'm also not sure why you reassigned it to jonata, who doesn't seem to be an active Developer fixing Bugs (if you've talked to him previously and he offered himself to look into this it's okay, though)
  • You shouldn't add projects on your own (also, as long as you don't really know what you're doing).
    Just follow the guide here and let us do the rest. "You do your half of the work, then we do our half!", that's the deal.
    That's already it. so, please make sure to don't do the things stated above the next time.

But nevertheless, thanks for the report @Blendify, but no real bug here :)

Hey @Blendify, I don't see a need for a fix here. Having no limits isn't a bad thing mostly ;). Furthermore, I'd like to adress a couple of things in this report: * If you don't really know the active Blender developers and who's responsible for which part of Blender, don't assign bugs by yourself. Especially, you shouldn't assign bugs to Ton, as he currently isn't able to code for Blender or fix Bugs at all, there are other people doing this. I'm also not sure why you reassigned it to jonata, who doesn't seem to be an active Developer fixing Bugs (if you've talked to him previously and he offered himself to look into this it's okay, though) * You shouldn't add projects on your own (also, as long as you don't really know what you're doing). Just follow the guide [here ](https://developer.blender.org/maniphest/task/create/?project=2&type=Bug) and let us do the rest. "You do your half of the work, then we do our half!", that's the deal. That's already it. so, please make sure to don't do the things stated above the next time. But nevertheless, thanks for the report @Blendify, but no real bug here :)

Hello. I am not an active developer, I am just a user who sends bugs and bothers the developers a bit :D

Hello. I am not an active developer, I am just a user who sends bugs and bothers the developers a bit :D
Author
Member

hey sorry this is my first bug report
a couple of things one the bug
it only happened in the sequencer, not in the image editor, and you can zoom in for hour then spend the same time amount of time undoing it. i did not confirm this however it will turn to the color of the background.

hey sorry this is my first bug report a couple of things one the bug it only happened in the sequencer, not in the image editor, and you can zoom in for hour then spend the same time amount of time undoing it. i did not confirm this however it will turn to the color of the background.
Author
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note: seems that sequencer limits aren't enforced:

This change however only applies to newly created spaces, needs a do-versions too to update existing files.

P159: possible fix for #42506

diff --git a/source/blender/editors/space_sequencer/space_sequencer.c b/source/blender/editors/space_sequencer/space_sequencer.c
index c0cfaed..f97344f 100644
--- a/source/blender/editors/space_sequencer/space_sequencer.c
+++ b/source/blender/editors/space_sequencer/space_sequencer.c
@@ -144,7 +144,7 @@ static SpaceLink *sequencer_new(const bContext *C)
 	ar->alignment = RGN_ALIGN_TOP;
 	ar->flag |= RGN_FLAG_HIDDEN;
 	/* for now, aspect ratio should be maintained, and zoom is clamped within sane default limits */
-	ar->v2d.keepzoom = V2D_KEEPASPECT | V2D_KEEPZOOM;
+	ar->v2d.keepzoom = V2D_KEEPASPECT | V2D_KEEPZOOM | V2D_LIMITZOOM;
 	ar->v2d.minzoom = 0.00001f;
 	ar->v2d.maxzoom = 100000.0f;
 	ar->v2d.tot.xmin = -960.0f; /* 1920 width centered */

Note: seems that sequencer limits aren't enforced: This change however only applies to newly created spaces, needs a do-versions too to update existing files. [P159: possible fix for #42506](https://archive.blender.org/developer/P159.txt) ```diff diff --git a/source/blender/editors/space_sequencer/space_sequencer.c b/source/blender/editors/space_sequencer/space_sequencer.c index c0cfaed..f97344f 100644 --- a/source/blender/editors/space_sequencer/space_sequencer.c +++ b/source/blender/editors/space_sequencer/space_sequencer.c @@ -144,7 +144,7 @@ static SpaceLink *sequencer_new(const bContext *C) ar->alignment = RGN_ALIGN_TOP; ar->flag |= RGN_FLAG_HIDDEN; /* for now, aspect ratio should be maintained, and zoom is clamped within sane default limits */ - ar->v2d.keepzoom = V2D_KEEPASPECT | V2D_KEEPZOOM; + ar->v2d.keepzoom = V2D_KEEPASPECT | V2D_KEEPZOOM | V2D_LIMITZOOM; ar->v2d.minzoom = 0.00001f; ar->v2d.maxzoom = 100000.0f; ar->v2d.tot.xmin = -960.0f; /* 1920 width centered */ ```
Jonata Bolzan was unassigned by Julian Eisel 2014-11-06 10:04:14 +01:00
Julian Eisel self-assigned this 2014-11-06 10:04:14 +01:00
Member

Okay, should be an easy fix. Can have a look at it later.

Okay, should be an easy fix. Can have a look at it later.

This could be set as todo, its not really much of a problem

be sure to check this fix works for split-screen preview too.

This could be set as todo, its not really much of a problem be sure to check this fix works for split-screen preview too.
Author
Member

I don't no exactly how this "bit" of code works but make sure that it will apply itself to the other previews such as the Vetro-Scope waveform and histogram.

I don't no exactly how this "bit" of code works but make sure that it will apply itself to the other previews such as the Vetro-Scope waveform and histogram.

Setting as todo, this isn't really preventing anyone from using the zoom operator.

Setting as todo, this isn't really preventing anyone from using the zoom operator.
Julian Eisel removed their assignment 2014-11-11 23:32:16 +01:00

Don't think this is a quick hack, its a very small change but needs to be done carefully and test with file versioning.

Don't think this is a quick hack, its a very small change but needs to be done carefully and test with file versioning.

Removed subscriber: @Ton

Removed subscriber: @Ton
Antonis Ryakiotakis was assigned by Aaron Carlisle 2015-02-06 17:23:09 +01:00
Author
Member

May be gooseberry can fix this

May be gooseberry can fix this

This issue was referenced by 13c275ce84

This issue was referenced by 13c275ce8477c94d53b3799c28b48011b59db2fb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 13c275ce84.

Closed by commit 13c275ce84.
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

This is fixed 25%

see picture
screen.png

(Nota Bene: This Picture is of two pixels next to each other zoomed to really far)

The zoom limits should be somewhere like that of the image editor

This is fixed 25% see picture ![screen.png](https://archive.blender.org/developer/F147301/screen.png) (Nota Bene: This Picture is of two pixels next to each other zoomed to really far) The zoom limits should be somewhere like that of the image editor

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Limits should be more sane now.

Limits should be more sane now.
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

still does not work?

Linux build afa8a0a

still does not work? Linux build afa8a0a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

It "works" fine, it is not really important does not stop anyone from working and we have much more important things to look at.

It "works" fine, it is not really important does not stop anyone from working and we have much more important things to look at.
Author
Member

is it a reasonable option to keep this as a todo since pixels start to look like multiple pixels

is it a reasonable option to keep this as a todo since pixels start to look like multiple pixels
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42506
No description provided.