Fix T42506 sequencer not limiting zoom.

Fix by Campbell thanks!